[package]
name = "keyman-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Command-line client for Keyman, the cross-platform keyboarding system from SIL Global (stage 1: macOS only)"
keywords = ["keyman", "keyboard", "input-method", "macos", "cli"]
categories = ["command-line-utilities"]
publish = false

[[bin]]
name = "keyman"
path = "src/main.rs"

[lib]
name = "keyman_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these pedantic lints that are noisy without adding value:
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
